--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "ws": "^8.17.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
