--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "ws": "^8.17.1"
   },
   "devDependencies": {
