--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "websocket": "^1.0.35",
     "ws": "^8.17.1"
   },
   "devDependencies": {
