--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "websocket": "^1.0.35",
-    "ws": "^8.17.1"
+    "ws": "^8.17.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
