--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,9 @@
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.35"
   },
+  "devDependencies": {
+    "babel-jest": "^24.9.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
