--- a/client/package.json
+++ b/client/package.json
@@ -1,22 +1,30 @@
 {
   "name": "client",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^3.6.0",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.35"
   },
   "devDependencies": {
-    "babel-jest": "^24.9.0"
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.24.9",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/preset-env": "^7.24.8",
+    "babel-jest": "^29.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
