--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "intl": "^1.2.5",
+    "mysql": "^2.18.1",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "timeago.js": "^4.0.2",
     "websocket": "^1.0.35",
-    "ws": "^8.17.1",
-    "mysql": "^2.18.1"
+    "ws": "^8.17.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
