--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "express-session": "^1.18.0",
     "intl": "^1.2.5",
     "mysql": "^2.18.1",
+    "mysql-client": "^0.3.0",
+    "mysql2": "^3.10.3",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "timeago.js": "^4.0.2",
