--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "intl": "^1.2.5",
+    "moment-timezone": "^0.5.45",
     "mysql": "^2.18.1",
     "mysql-client": "^0.3.0",
     "mysql2": "^3.10.3",
