--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,6 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_API_URL=https://chatapp-v2-lwyx.onrender.com
-# REACT_APP_API_URL=http://localhost:5000
+# REACT_APP_API_URL=https://chatapp-v2-lwyx.onrender.com
+REACT_APP_API_URL=http://localhost:5000
+
+HOST=0.0.0.0
+PORT=3000
