--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "intl": "^1.2.5",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "mysql": "^2.18.1",
     "mysql-client": "^0.3.0",
